migrated code to single-db / nginx test setup, renamed properties _ -> .